Fixed spacing issues and formatted final buttons

--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -9,6 +9,7 @@ body {
 	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
 	color: #424242;
 	line-height: 1.4;
+	margin-bottom: 100px;
 }
 
 /* Fonts */
@@ -44,6 +45,10 @@ h1 {
   text-align: center;
 }
 
+.header{
+	margin-bottom: 40px;
+}
+
 .speech-bubble {
 	padding: 12px 20px 12px 20px;
 	margin: 10px 175px 10px 175px;
@@ -71,14 +76,16 @@ h1 {
 	margin-bottom: -7px;
 }
 
+
 .progress-outline {
-	/* border: 1px solid #777; */
-	display: block;
+	display: inline-block;
 	height: 10px;
 	width: 249px;
 	background-color: #eaeaea;
 	border-bottom: 1px solid #777;
-
+	border-right: 1px solid #777;
+	margin-bottom: 10px;
+	margin-left:-15px;
 }
 
 .progress-value {
@@ -91,9 +98,10 @@ h1 {
 
 .sub-container {
 	border: 1px solid #777;
-	width: 249px;
+	width: 250px;
 	margin: 0px auto;
 	margin-top: 20px;
+	padding: 0px 15px 15px 15px;
 }
 
 .orange {
@@ -101,43 +109,37 @@ h1 {
 }
 
 p {
+	font-family: "rooney-web", "AmericanTypewriter", Rockwell, serif;
 	font-size: 12px;
 	color: #777;
-	margin-left: 20px;
-	margin-right: 15px;
 	text-align: left;
 
 }
 
 .money-input {
-	height: 34px;
-	width: 80px;
+	height: 40px;
+	width: 100px;
 	margin-right: 10px;
-	border-radius: 5px 5px 5px 5px;
+	border-radius: 3px;
 	border: solid 2px #eaeaea;
 	padding-left: 15px;
 	font-size: 15px;
 	font-weight: 800;
-	margin-left: 2px;
-
 }
 
 .dollar-sign {
-  position: relative;
-  display: inline;
-	margin-left: 5px;
-
+    position: relative;
+    display: inline;
 }
 
 .dollar-sign:before {
-  content: '$';
-  position: absolute;
-  top: 0;
-  margin-left: 8px;
-  z-index: 1;
-	color: #777;
-	font-weight: bold;
-
+    content: '$';
+    position: absolute;
+    top: 0;
+    margin-left: 5px;
+    z-index: 1;
+    color: #777;
+    font-weight: bold;
 }
 
 .give-button {
@@ -145,17 +147,43 @@ p {
 	color: white;
 	width: 102px;
 	height: 40px;
-	border-radius: 5px 5px 5px 5px;
+	border-radius: 3px;
 	font-size: 14px;
+	font-weight: 500;
+	font-family: "rooney-web", "AmericanTypewriter", Rockwell, serif;
 }
 
 .button-container {
+	margin: 15px 0px;
 	display: block;
 	width: 100%;
 	height: 30px;
-	margin-bottom: 15px;
 }
 
 .blue {
 	color: #20A1D4;
+}
+
+.save {
+	width: 118px;
+	height: 35px;
+	margin-top: 10px;
+	margin-right: 5px;
+	font-weight: bold;
+	border-radius: 3px;
+	background-color: #eaeaea;
+	color: #777;
+
+}
+
+.tell {
+	width: 118px;
+	height: 35px;
+	margin-top: 10px;
+	margin-left: 5px;
+	font-weight: bold;
+	border-radius: 3px;
+	background-color: #eaeaea;
+	color: #777;
+
 }
